--- a/.github/workflows/check_salaries.yml
+++ b/.github/workflows/check_salaries.yml
@@ -14,6 +14,5 @@ jobs:
       - uses: ruby/setup-ruby@v1
       - name: Salaries
         run: |
-          ./salaries.rb -cEUR -fmarkdown >> $GITHUB_STEP_SUMMARY
-          ./salaries.rb -cUSD -fmarkdown >> $GITHUB_STEP_SUMMARY
+          ./salaries.rb -a >> $GITHUB_STEP_SUMMARY
 
