--- a/.github/workflows/check_salaries.yml
+++ b/.github/workflows/check_salaries.yml
@@ -13,6 +13,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
       - name: Salaries
-        run: |
-          ./salaries.rb -a >> $GITHUB_STEP_SUMMARY
+        run: ./salaries.rb -a >> $GITHUB_STEP_SUMMARY
 
